--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "gltfjsx": "^5.0.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "react-use": "^17.4.0",
     "recharts": "^2.1.14",
     "styled-components": "^5.3.5",
-    "swiper": "^8.3.2",
+    "swiper": "^8.4.2",
+    "swr": "^1.3.0",
     "three": "^0.144.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
