--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/barlow": "^4.5.9",
     "@fontsource/kalam": "^4.5.9",
     "@fontsource/noto-sans": "^4.5.11",
-    "@fontsource/open-sans": "^4.5.11",
+    "@fontsource/permanent-marker": "^4.5.7",
     "@react-three/drei": "^9.29.1",
     "@react-three/fiber": "^8.7.3",
     "@testing-library/jest-dom": "^5.16.5",
